--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moive_app_2023",
+  "name": "movie_app_2023",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -19,7 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://Leedoyi.github.io/moive_app_2023/"
+  "homepage": "https://doyi0107.github.io/movie_app_2023/"
 }
